Double voidvine, gen changes