@@ -1,22 +1,24 @@
 package com.idark.valoria.registries.item.types.consumables;
 
-import com.google.common.collect.*;
 import com.idark.valoria.*;
 import com.idark.valoria.core.capability.*;
+import com.idark.valoria.core.interfaces.*;
+import com.idark.valoria.registries.item.component.*;
 import net.minecraft.*;
 import net.minecraft.network.chat.*;
 import net.minecraft.world.effect.*;
 import net.minecraft.world.entity.*;
 import net.minecraft.world.entity.player.*;
+import net.minecraft.world.inventory.tooltip.*;
 import net.minecraft.world.item.*;
 import net.minecraft.world.level.*;
 import net.minecraftforge.registries.*;
 import org.jetbrains.annotations.*;
-import pro.komaru.tridot.api.*;
+import pro.komaru.tridot.util.struct.data.*;
 
 import java.util.*;
 
-public class CleansingConsumableItem extends AbstractConsumableItem{
+public class CleansingConsumableItem extends AbstractConsumableItem implements TooltipComponentItem{
     public float voidCleanse;
     public MobEffectInstance effect;
     public int cooldownTicks = 75;
@@ -50,7 +52,11 @@ public class CleansingConsumableItem extends AbstractConsumableItem{
     public void appendHoverText(ItemStack pStack, @Nullable Level pLevel, List<Component> pTooltipComponents, TooltipFlag pIsAdvanced){
         super.appendHoverText(pStack, pLevel, pTooltipComponents, pIsAdvanced);
         pTooltipComponents.add(Component.translatable("tooltip.valoria.void_cleanse", voidCleanse).withStyle(ChatFormatting.GRAY).withStyle(style -> style.withFont(Valoria.FONT)));
-        Utils.Items.effectTooltip(ImmutableList.of(new MobEffectInstance(effect)), pTooltipComponents, 1, 1);
+    }
+
+    @Override
+    public Seq<TooltipComponent> getTooltips(ItemStack pStack){
+        return Seq.with(new ClientEffectsListClientComponent(List.of(new MobEffectInstance(effect)), Component.translatable("tooltip.tridot.applies").withStyle(ChatFormatting.GRAY)));
     }
 
     @Override
